Fix bill payment automation, credit card transaction visibility, and update settings data management UI

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     
     <application
-        android:label="Pario"
+        android:label="Parion"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
