--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,8 @@ dependencies:
   local_auth_android: any
   googleapis: ^15.0.0
   extension_google_sign_in_as_googleapis_auth: ^2.0.13
+  flutter_timezone: ^5.0.1
+  photo_view: ^0.15.0
 dev_dependencies:
   build_runner: ^2.4.13
   json_serializable: ^6.8.0
