--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,7 @@ dependencies:
   extension_google_sign_in_as_googleapis_auth: ^2.0.13
   flutter_timezone: ^5.0.1
   photo_view: ^0.15.0
+  currency_text_input_formatter: ^2.3.0
 dev_dependencies:
   build_runner: ^2.4.13
   json_serializable: ^6.8.0
