--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ dependencies:
   flutter_timezone: ^5.0.1
   photo_view: ^0.15.0
   currency_text_input_formatter: ^2.3.0
+  http: ^1.2.0
 dev_dependencies:
   build_runner: ^2.4.13
   json_serializable: ^6.8.0
@@ -90,6 +91,7 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
+  test: ^1.25.0
 
   flutter_launcher_icons: ^0.14.1
   # The "flutter_lints" package below contains a set of recommended lints to
